--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RHs</title>
   <link rel="stylesheet" href="estilos/estilos.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 
-<body class="contenido">
-  <header class="titulo">
-    <h1>Rig Hunters</h1>
-  </header>
-  <main class="navegacion">
-    <nav>
+<body>
+  <div class="contenido">
+    <header class="titulo">
+      <h1 class="animate__animated animate__heartBeat">Rig Hunters</h1>
+    </header>
+    <nav class="navegacion">
       <ul class="menu">
         <li><a href="index.html">
             Inicio
@@ -37,10 +41,10 @@
                 Rigs
               </a></li>
           </ul>
-
     </nav>
-
-    <section class="texto">
+  </div>
+  <main>
+    <section>
       <div class="imagenIndex">
         <img src="https://wallpapercave.com/wp/wp2744423.jpg" alt="Mark Tremonti">
       </div>
@@ -50,8 +54,8 @@
           quam, repellendus consequatur autem officia eum cupiditate qui beatae repellat inventore, unde reprehenderit
           incidunt voluptatem?</p>
       </article>
-    </section class="marcas">
-    <div>
+    </section>
+    <div class="marcas">
       <section>
         <ul class="listaMarcas">
           <li><a href="paginas/ibanez.html" alt="ibanez" title="Ibanez">
@@ -68,18 +72,22 @@
             </a></li>
         </ul>
       </section>
-  </main>
-  <footer class="footer">
-    <div>
-      <p>Seguinos en Redes</p>
-      <a href="https://es-la.facebook.com/" alt="facebook" title="Facebook">
-        <img class="fbLogo" src="img/fblogo.png" alt="Facebook"></a>
-      <a href="https://z-p15.www.instagram.com/accounts/login/?next=/p/CK8SOUgBxgo/&hl=es-la" alt="Instagram"
-        title="Instagram"><img class="igLogo" src="img/iglogo.png" alt="Instagram"></a>
-      <a href="https://www.youtube.com/?hl=ES" alt="Youtube" title="Youtube"><img class="ytLogo" src="img/ytlogo.png"
-          alt="Youtube"></a>
-      <h3 class="copyR">@2022 RigHunters Copyright</h3>
     </div>
+  </main>
+  <div>
+    <footer class="footer">
+      <div>
+        <p>Seguinos en Redes</p>
+        <a href="https://es-la.facebook.com/" alt="facebook" title="Facebook">
+          <img class="fbLogo" src="img/fblogo.png" alt="Facebook"></a>
+        <a href="https://z-p15.www.instagram.com/accounts/login/?next=/p/CK8SOUgBxgo/&hl=es-la" alt="Instagram"
+          title="Instagram"><img class="igLogo" src="img/iglogo.png" alt="Instagram"></a>
+        <a href="https://www.youtube.com/?hl=ES" alt="Youtube" title="Youtube"><img class="ytLogo" src="img/ytlogo.png"
+            alt="Youtube"></a>
+        <h3 class="copyR">@2022 RigHunters Copyright</h3>
+      </div>
+  </div>
   </footer>
 </body>
+
 </html>
