--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -6,39 +6,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto</title>
   <link rel="stylesheet" href="../estilos/estilos.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 
 <body>
-  <header>
-    <img class="logo" src="../img/logo.png">
-  </header>
-  <div>
-    <h1 class="titulo">Contacto</h1>
+  <div class="contenido">
+    <header class="titulo">
+      <h1 class="animate__animated animate__heartBeat">Contacto</h1>
+    </header>
+    <nav class="navegacion">
+      <ul class="menu">
+        <li><a href="../index.html">
+            Inicio
+          </a></li>
+        <li><a href="contacto.html">
+            Contacto
+          </a></li>
+        <li><a href="#">Marcas</a>
+          <ul class="submenu">
+            <li><a href="ibanez.html">
+                Ibanez
+              </a></li>
+            <li><a href="fender.html">
+                Fender
+              </a></li>
+            <li><a href="suhr.html">
+                Suhr
+              </a></li>
+            <li><a href="rigs.html">
+                Rigs
+              </a></li>
+          </ul>
+    </nav>
   </div>
-  <nav class="navegacion">
-    <ul class="menu">
-      <li><a href="../index.html">
-          Inicio
-        </a></li>
-      <li><a href="contacto.html">
-          Contacto
-        </a></li>
-      <li><a href="#">Marcas</a>
-    <ul class="submenu">
-      <li><a href="ibanez.html">
-          Ibanez
-        </a></li>
-      <li><a href="fender.html">
-          Fender
-        </a></li>
-      <li><a href="suhr.html">
-          Suhr
-        </a></li>
-      <li><a href="rigs.html">
-          Rigs
-        </a></li>
-       </ul>
-  </nav>
   <main>
     <section class="datos">
       <article>
@@ -79,21 +82,21 @@
         <input type="reset">
       </form>
     </div>
-      <footer id="footer">
-        <div>
-          <p>Seguinos en Redes</p>
-          <a href="https://es-la.facebook.com/" alt="facebook" title="Facebook">
-            <img class="fbLogo" src="../img/fblogo.png" alt="Facebook"></a>
-          <a href="https://z-p15.www.instagram.com/accounts/login/?next=/p/CK8SOUgBxgo/&hl=es-la" alt="Instagram"
-            title="Instagram"><img class="igLogo" src="../img/iglogo.png" alt="Instagram"></a>
-          <a href="https://www.youtube.com/?hl=ES" alt="Youtube" title="Youtube"><img class="ytLogo"
-              src="../img/ytlogo.png" alt="Youtube"></a>
-        </div>
-        @2022 RigHunters Copyright
-      </footer>
-
-
   </main>
+  <div>
+    <footer class="footer">
+      <div>
+        <p>Seguinos en Redes</p>
+        <a href="https://es-la.facebook.com/" alt="facebook" title="Facebook">
+          <img class="fbLogo" src="../img/fblogo.png" alt="Facebook"></a>
+        <a href="https://z-p15.www.instagram.com/accounts/login/?next=/p/CK8SOUgBxgo/&hl=es-la" alt="Instagram"
+          title="Instagram"><img class="igLogo" src="../img/iglogo.png" alt="Instagram"></a>
+        <a href="https://www.youtube.com/?hl=ES" alt="Youtube" title="Youtube"><img class="ytLogo"
+            src="../img/ytlogo.png" alt="Youtube"></a>
+        <h3 class="copyR">@2022 RigHunters Copyright</h3>
+      </div>
+  </div>
+  </footer>
 
 </body>
 
