--- a/paginas/fender.html
+++ b/paginas/fender.html
@@ -7,80 +7,113 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> RH Fender</title>
   <link rel="stylesheet" href="../estilos/estilos.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 
-<body class="contenido">
-  <header class="titulo">
-    <h1>Fender</h1>
-  </header>
-  <main class="navegacion">
-  <nav>
-    <ul class="menu">
-      <li><a href="../index.html">
-          Inicio
-        </a></li>
-      <li><a href="contacto.html">
-          Contacto
-        </a></li>
-      <li><a href="#">Marcas</a>
-    <ul class="submenu">
-      <li><a href="ibanez.html">
-          Ibanez
-        </a></li>
-      <li><a href="fender.html">
-          Fender
-        </a></li>
-      <li><a href="suhr.html">
-          Suhr
-        </a></li>
-      <li><a href="rigs.html">
-          Rigs
-        </a></li>
-       </ul>
-  </nav>
-  <section>
-    <article class="fenderAs">
-      <h2>Fender American Ultra Stratocaster</h2>
-      <img class="fenderFront" src="https://www.fmicassets.com/Damroot/ZoomJpg/10001/0118010712_gtr_frt_001_rr.jpg">
-
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi quasi vel perspiciatis
-        neque et in</p>
-      <p>voluptatum saepe animi tempora corrupti mollitia enim quos, eligendi totam voluptates hic quaerat
-        deserunt
-        fuga.</p>
-      <div>
-        <h2>Stevie Ray Vaughan Fender</h2>
-        <iframe width="460" height="215" src="https://www.youtube.com/embed/cFwTbsKkqxE" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
-      <h2>Especificaciones</h2>
-      <table border="5" cellpading="22px" cellspacing="5px">
-        <th>Puente</th>
-        <th>Diapason</th>
-        <th>Bobinas</th>
-        <tr>
-          <td>Tune-o-Matic</td>
-          <td>Palisandro</td>
-          <td>Seymour Duncan</td>
-        </tr>
-      </table>
-    </article>
-  </section>
-  </main>
-      <footer class="footer">
-        <div>
-          <p>Seguinos en Redes</p>
-          <a href="https://es-la.facebook.com/" alt="facebook" title="Facebook">
-            <img class="fbLogo" src="../img/fblogo.png" alt="Facebook"></a>
-          <a href="https://z-p15.www.instagram.com/accounts/login/?next=/p/CK8SOUgBxgo/&hl=es-la" alt="Instagram"
-            title="Instagram"><img class="igLogo" src="../img/iglogo.png" alt="Instagram"></a>
-          <a href="https://www.youtube.com/?hl=ES" alt="Youtube" title="Youtube"><img class="ytLogo"
-              src="../img/ytlogo.png" alt="Youtube"></a>
-              <h3 class="copyR">@2022 RigHunters Copyright</h3>
+<body>
+  <div class="contenido">
+    <header class="titulo">
+      <h1 class="animate__animated animate__heartBeat">Fender</h1>
+    </header>
+    <nav class="navegacion">
+      <ul class="menu">
+        <li><a href="../index.html">
+            Inicio
+          </a></li>
+        <li><a href="contacto.html">
+            Contacto
+          </a></li>
+        <li><a href="#">Marcas</a>
+          <ul class="submenu">
+            <li><a href="ibanez.html">
+                Ibanez
+              </a></li>
+            <li><a href="fender.html">
+                Fender
+              </a></li>
+            <li><a href="suhr.html">
+                Suhr
+              </a></li>
+            <li><a href="rigs.html">
+                Rigs
+              </a></li>
+          </ul>
+    </nav>
+  </div>
+  <main>
+    <section>
+      <article class="fenderAs">
+        <h2 class="animate__animated animate__headShake">Fender American Ultra Stratocaster</h2>
+        <div class="fenderFront">
+          <img src="https://www.fmicassets.com/Damroot/ZoomJpg/10001/0118010712_gtr_frt_001_rr.jpg">
         </div>
-      </footer>
+        <p>La serie American Ultra de guitarras y bajos es la más avanzada para músicos exigentes que exigen lo último
+          en precisión,
+          rendimiento y tono. La American Ultra Stratocaster presenta un exclusivo perfil de mástil de " D moderna”
+          con bordes de diapasón redondeados para horas de comodidad, y la forma del talón del mástil permite un fácil
+          acceso al registro más alto.
+          Un veloz diapasón de radio compuesto de 10 "a 14" con 22 trastes medium jumbo para solos precisos y sin
+          esfuerzo, mientras que las pastillas Ultra Noiseless ™
+          y las opciones avanzadas de cableado brindan infinitas posibilidades de sonido: sin zumbidos. Este versátil
+          instrumento de última generación te inspirará a llevar
+          tu interpretación a nuevas alturas. Otras características incluyen clavijeros de bloqueo sellados, herrajes
+          cromados y cejilla de hueso. Incluye estuche rígido}
+          moldeado de primera calidad.</p>
+
+        <h3>CARACTERÍSTICAS</h3>
+        <p>
+          Tres pastillas de bobina simple Ultra Noiseless Vintage.
+          Perfil de mástil en forma de "D moderna".
+          Diapasón de radio compuesto de 10 "-14"; 22 trastes medium jumbo.
+          Incluye estuche rígido moldeado premium</p>
+        <h3>MÁSTIL "D" MODERNA</h3>
+        <p>Delgado pero más ancho, el perfil del mástil "Modern D" funciona para cualquier estilo de tocar. Los bordes
+          redondeados del diapasón y un acabado suave y sedoso hacen que el mástil sea fácil de tocar.</p>
+        <h3>RADIO COMPUESTO 10 "-14"</h3>
+        <p>Diseñado para la velocidad y los bendings, el diapasón de radio compuesto de 10 "-14" se redondea cerca de la
+          cejilla para facilitar la digitación, volviéndose cada vez más plano a medida que se acerca al registro
+          superior para solos más fáciles de ejecutar.</p>
+        <h3>CONTORNO DEL CUERPO MEJORADO</h3>
+        <p>El talón del mástil presenta contornos rediseñados para un acceso incomparable a los registros superiores del
+          diapasón, mientras que el contorno del cuerpo trasero está diseñado para mayor comodidad.
+        </p>
+        <h3>PASTILLAS VINTAGE ULTRA NOISELESS</h3>
+        <p>Las pastillas de bobina simple Ultra Noiseless Vintage conservan el legendario tono Fender, al tiempo que
+          reducen el zumbido.
+        </p>
+        <h3>ELECTRÓNICA AVANZADA</h3>
+        <p>El interruptor S-1 de la perilla de volumen selecciona entre el cableado en serie o en paralelo para un rango
+          tonal adicional, mientras que el circuito de “treble bleed” mantiene los agudos en cualquier volumen.
+        </p>
+        <h3>CLAVIJERO DE BLOQUEO</h3>
+        <p>Una característica de alto rendimiento, el clavijero de bloqueo ofrece una mayor estabilidad de afinación a
+          la vez que cambiar las cuerdas sea más rápido y fácil.
+        </p>
+          <h2>Fender Test</h2>
+          <div class="fenderTest">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/WURQr9IASgM" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        </div>
+      </article>
+    </section>
+  </main>
+  <footer class="footer">
+    <div>
+      <p>Seguinos en Redes</p>
+      <a href="https://es-la.facebook.com/" alt="facebook" title="Facebook">
+        <img class="fbLogo" src="../img/fblogo.png" alt="Facebook"></a>
+      <a href="https://z-p15.www.instagram.com/accounts/login/?next=/p/CK8SOUgBxgo/&hl=es-la" alt="Instagram"
+        title="Instagram"><img class="igLogo" src="../img/iglogo.png" alt="Instagram"></a>
+      <a href="https://www.youtube.com/?hl=ES" alt="Youtube" title="Youtube"><img class="ytLogo" src="../img/ytlogo.png"
+          alt="Youtube"></a>
+      <h3 class="copyR">@2022 RigHunters Copyright</h3>
+    </div>
+  </footer>
 
 </body>
 
