--- a/paginas/ibanez.html
+++ b/paginas/ibanez.html
@@ -7,43 +7,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> RH Ibanez</title>
   <link rel="stylesheet" href="../estilos/estilos.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 
-<body class="contenido">
-  <header class="titulo">
-    <h1>Ibanez</h1>
-  </header>
-  <nav class="navegacion">
-    <ul class="menu">
-      <li><a href="../index.html">
-          Inicio
-        </a></li>
-      <li><a href="contacto.html">
-          Contacto
-        </a></li>
-      <li><a href="#">Marcas</a>
-        <ul class="submenu">
-          <li><a href="ibanez.html">
-              Ibanez
-            </a></li>
-          <li><a href="fender.html">
-              Fender
-            </a></li>
-          <li><a href="suhr.html">
-              Suhr
-            </a></li>
-          <li><a href="rigs.html">
-              Rigs
-            </a></li>
-        </ul>
-  </nav>
-  <section>
-    <div>
+<body>
+  <div>
+    <header class="titulo">
+      <h1 class="animate__animated animate__heartBeat">Ibanez</h1>
+    </header>
+    <nav class="navegacion">
+      <ul class="menu">
+        <li><a href="../index.html">
+            Inicio
+          </a></li>
+        <li><a href="contacto.html">
+            Contacto
+          </a></li>
+        <li><a href="#">Marcas</a>
+          <ul class="submenu">
+            <li><a href="ibanez.html">
+                Ibanez
+              </a></li>
+            <li><a href="fender.html">
+                Fender
+              </a></li>
+            <li><a href="suhr.html">
+                Suhr
+              </a></li>
+            <li><a href="rigs.html">
+                Rigs
+              </a></li>
+          </ul>
+    </nav>
+  </div>
+  <main>
+    <section class="ibanezFlex">
       <article class="ibanezRg">
-        <h2>Ibanez RG8527Z</h2>
-        <img class="ibanezFront"
-          src="https://www.ibanez.com/common/product_artist_file/file/ps_main_eg_rg_jcustom_us.png">
-
+        <h2 class="animate__animated animate__headShake">Ibanez RG8527Z</h2>
+        <div class="ibanezFront">
+        <img class="mediaIba" src="https://www.ibanez.com/common/product_artist_file/file/ps_main_eg_rg_jcustom_us.png">
+        </div>
         <p>Al igual que todas las guitarras de la línea de gama alta J Custom de Ibanez, el RG8527Z tiene todo lo que un
           guitarrista de primer nivel busca. Experimenta una resonancia increíble y sustain, a través de un cuerpo
           africano
@@ -56,50 +62,47 @@
           diapasón de árbol de la vida y accesorios cosmo negro.
         </p>
       </article>
+      <div class="ibaEsp">
         <h2 class="espec">Especificaciones</h2>
-        <table class="tabEspec" border="2" cellpading="22px" cellspacing="5px" >
-          <th>Mastil</th>
-          <th>Cuerpo</th>
-          <th>Diapason</th>
-          <th>Puente</th>
-          <th>Espacio entre Cuerdas</th>
-          <th>Bobina Mastil</th>
-          <th>Bobina Puente</th>
-          <th>Color</th>
-          <tr class="charIb">
-            <td>RG j.custom Wizard-7 5pc Maple/Wenge</td>
-            <td>AAA Flamed Maple African Mahogany</td>
-            <td>Bound Macassar Ebony Arbol de la vida</td>
-            <td>Edge-Zero tremolo bridge w/ZPS3</td>
-            <td>10.8mm</td>
-            <td>DiMarzio® PAF® 7 Pasiva/Ceramica</td>
-            <td>DiMarzio® PAF® 7 Pasiva/Ceramica</td>
-            <td>Cosmos Black</td>
-          </tr>
-        </table>
-      <div class="ibaTest">
-        <h3>Ibanez Test</h3>
-        <div class="ibaVid">
+          <h3>Mastil</h3>
+          <p>RG j.custom Wizard-7 5pc Maple/Wenge</p>
+          <h3>Cuerpo</h3>
+          <p>AAA Flamed Maple African Mahogany</p>
+          <h3>Diapason</h3>
+          <p>Bound Macassar Ebony Arbol de la vida</p>
+          <h3>Puente</h3>
+          <p>Edge-Zero tremolo bridge w/ZPS3</p>
+          <h3>Espacio entre Cuerdas</h3>
+          <p>10.8mm</p>
+          <h3>Bobina Mastil / Puente</h3>
+          <p>DiMarzio® PAF® 7 Pasiva/Ceramica</p>
+          <h3>Color</h3>
+          <p>Cosmos Black</p>
+      </div>
+      <div class="testTexto">
+        <h2>Ibanez Test</h2>
+      </div>
+      <div class="ibanezVid">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/2HTqoSQXOyU" title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
-          </div>
       </div>
-    </div>
-  </section>
-  <footer class="footer">
+    </section>
     <div>
-      <p>Seguinos en Redes</p>
-      <a href="https://es-la.facebook.com/" alt="facebook" title="Facebook">
-        <img class="fbLogo" src="../img/fblogo.png" alt="Facebook"></a>
-      <a href="https://z-p15.www.instagram.com/accounts/login/?next=/p/CK8SOUgBxgo/&hl=es-la" alt="Instagram"
-        title="Instagram"><img class="igLogo" src="../img/iglogo.png" alt="Instagram"></a>
-      <a href="https://www.youtube.com/?hl=ES" alt="Youtube" title="Youtube"><img class="ytLogo" src="../img/ytlogo.png"
-          alt="Youtube"></a>
-      <h3 class="copyR">@2022 RigHunters Copyright</h3>
+      <footer class="footer">
+        <div>
+          <p>Seguinos en Redes</p>
+          <a href="https://es-la.facebook.com/" alt="facebook" title="Facebook">
+            <img class="fbLogo" src="../img/fblogo.png" alt="Facebook"></a>
+          <a href="https://z-p15.www.instagram.com/accounts/login/?next=/p/CK8SOUgBxgo/&hl=es-la" alt="Instagram"
+            title="Instagram"><img class="igLogo" src="../img/iglogo.png" alt="Instagram"></a>
+          <a href="https://www.youtube.com/?hl=ES" alt="Youtube" title="Youtube"><img class="ytLogo"
+              src="../img/ytlogo.png" alt="Youtube"></a>
+          <h3 class="copyR">@2022 RigHunters Copyright</h3>
+        </div>
     </div>
-  </footer>
+    </footer>
 
 </body>
 
