--- a/index.html
+++ b/index.html
@@ -6,59 +6,91 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RHs</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="estilos/estilos.css">
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
 </head>
 
-<body>
-  <div class="contenido">
-    <header class="titulo">
-      <h1 class="animate__animated animate__heartBeat">Rig Hunters</h1>
-    </header>
-    <nav class="navegacion">
-      <ul class="menu">
-        <li><a href="index.html">
-            Inicio
-          </a></li>
-        <li><a href="paginas/contacto.html">
-            Contacto
-          </a></li>
-        <li><a href="#">Marcas</a>
-          <ul class="submenu">
-            <li><a href="paginas/ibanez.html">
-                Ibanez
-              </a></li>
-            <li><a href="paginas/fender.html">
-                Fender
-              </a></li>
-            <li><a href="paginas/suhr.html">
-                Suhr
-              </a></li>
-            <li><a href="paginas/rigs.html">
-                Rigs
-              </a></li>
+<body class="fondoBody">
+  <div class="container-fluid contBoot">
+    <div class="row col-12 navInd">
+      <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <a class="navbar-brand animate__animated animate__heartBeat titulo">Rig Hunters</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav menu">
+            <li class="nav-item inicio">
+              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item contacto">
+              <a class="nav-link" href="paginas/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle marcas" href="#" id="navbarDropdownMenuLink" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Marcas
+              </a>
+              <ul class="dropdown-menu submenu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="paginas/ibanez.html">Ibanez</a></li>
+                <li><a class="dropdown-item" href="paginas/fender.html">Fender</a></li>
+                <li><a class="dropdown-item" href="paginas/suhr.html">Suhr</a></li>
+                <li><a class="dropdown-item" href="paginas/rigs.html">Rigs</a></li>
+              </ul>
+            </li>
           </ul>
-    </nav>
+        </div>
+      </nav>
+    </div>
   </div>
+
   <main>
-    <section>
-      <div class="imagenIndex">
-        <img src="https://wallpapercave.com/wp/wp2744423.jpg" alt="Mark Tremonti">
-      </div>
-      <article class="textoMediano">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse saepe sit necessitatibus ullam quas
-          voluptate
-          quam, repellendus consequatur autem officia eum cupiditate qui beatae repellat inventore, unde reprehenderit
-          incidunt voluptatem?</p>
-      </article>
+    <div class="container-fluid">
+      <section class="row">
+        <div class="col-12">
+            <div class="imagenIndex">
+              <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="https://vanzguitars.files.wordpress.com/2015/04/kiko-loureiro-02-alex-solca.jpg"
+                      class="d-block w-100" alt="Kiko Loureiro">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://wallpapercave.com/wp/wp4826377.jpg" class="d-block w-100" alt="Guthrie Govan">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://mcdn.wallpapersafari.com/medium/35/58/H7rhQt.jpg" class="d-block w-100"
+                      alt="John Mayer">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="textoNosotros">
+              <h2>¡Nos alegra tu visita!</h2>
+              <p>Si llegaste hasta aca, significa que estas buscando un mejor
+                setup que se adapte mejor a tu estilo musical, hoy mediante la gran variedad de marcas que existen
+                en el mercado, en Rig Hunters nos tomamos el trabajo de seleccionar una guitarra por cada estilo,
+                ya sea que te guste el Blues, el metalcore, el Jazz, el sonido valvular o mas crudo, dejanos
+                decirte que llegaste al lugar indicado.</p>
+            </div>
+          </div>
+        </div>
+    </div>
     </section>
-    <div class="marcas">
-      <section>
+    <div class="marcas row">
+      <section class="col-12">
         <ul class="listaMarcas">
-          <li><a href="paginas/ibanez.html" alt="ibanez" title="Ibanez">
+          <li><a class="btn-iba" href="paginas/ibanez.html" alt="ibanez" title="Ibanez">
               <img class="logIba" src="img/logoibanez.png">
             </a></li>
           <li><a href="paginas/fender.html" alt="fender" title="Fender">
@@ -88,6 +120,14 @@
       </div>
   </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+  </script>
+  </div>
+  </div>
 </body>
 
 </html>
