--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -5,42 +5,51 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto</title>
-  <link rel="stylesheet" href="../estilos/estilos.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../estilos/estilos.css">
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
 </head>
 
-<body>
-  <div class="contenido">
-    <header class="titulo">
-      <h1 class="animate__animated animate__heartBeat">Contacto</h1>
-    </header>
-    <nav class="navegacion">
-      <ul class="menu">
-        <li><a href="../index.html">
-            Inicio
-          </a></li>
-        <li><a href="contacto.html">
-            Contacto
-          </a></li>
-        <li><a href="#">Marcas</a>
-          <ul class="submenu">
-            <li><a href="ibanez.html">
-                Ibanez
-              </a></li>
-            <li><a href="fender.html">
-                Fender
-              </a></li>
-            <li><a href="suhr.html">
-                Suhr
-              </a></li>
-            <li><a href="rigs.html">
-                Rigs
-              </a></li>
+<body class="fondoBody">
+  <div class="container-fluid contBoot">
+    <div class="row col-12">
+      <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <a class="navbar-brand animate__animated animate__heartBeat titulo">Contacto</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav menu">
+            <li class="nav-item inicio">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item contacto">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle marcas" href="#" id="navbarDropdownMenuLink" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Marcas
+              </a>
+              <ul class="dropdown-menu submenu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="ibanez.html">Ibanez</a></li>
+                <li><a class="dropdown-item" href="fender.html">Fender</a></li>
+                <li><a class="dropdown-item" href="suhr.html">Suhr</a></li>
+                <li><a class="dropdown-item" href="rigs.html">Rigs</a></li>
+              </ul>
+            </li>
           </ul>
-    </nav>
+        </div>
+      </nav>
+    </div>
   </div>
   <main>
     <section class="datos">
@@ -52,7 +61,7 @@
         </ul>
       </article>
     </section>
-    <div>
+    <div class="papiForm">
       <h3 class="mensaje">Dejanos tu Mensaje</h3>
       <form class="formulario">
 
@@ -97,6 +106,8 @@
       </div>
   </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
 </body>
 
