--- a/paginas/fender.html
+++ b/paginas/fender.html
@@ -6,101 +6,161 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> RH Fender</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../estilos/estilos.css">
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
-<body>
-  <div class="contenido">
-    <header class="titulo">
-      <h1 class="animate__animated animate__heartBeat">Fender</h1>
-    </header>
-    <nav class="navegacion">
-      <ul class="menu">
-        <li><a href="../index.html">
-            Inicio
-          </a></li>
-        <li><a href="contacto.html">
-            Contacto
-          </a></li>
-        <li><a href="#">Marcas</a>
-          <ul class="submenu">
-            <li><a href="ibanez.html">
-                Ibanez
-              </a></li>
-            <li><a href="fender.html">
-                Fender
-              </a></li>
-            <li><a href="suhr.html">
-                Suhr
-              </a></li>
-            <li><a href="rigs.html">
-                Rigs
-              </a></li>
+<body class="fondoBody">
+  <div class="container-fluid contBoot">
+    <div class="row col-12 navInd">
+      <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <a class="navbar-brand animate__animated animate__heartBeat titulo">Fender</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav menu">
+            <li class="nav-item inicio">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item contacto">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle marcas" href="#" id="navbarDropdownMenuLink" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Marcas
+              </a>
+              <ul class="dropdown-menu submenu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="ibanez.html">Ibanez</a></li>
+                <li><a class="dropdown-item" href="fender.html">Fender</a></li>
+                <li><a class="dropdown-item" href="suhr.html">Suhr</a></li>
+                <li><a class="dropdown-item" href="rigs.html">Rigs</a></li>
+              </ul>
+            </li>
           </ul>
-    </nav>
+        </div>
+      </nav>
+    </div>
   </div>
   <main>
-    <section>
-      <article class="fenderAs">
-        <h2 class="animate__animated animate__headShake">Fender American Ultra Stratocaster</h2>
-        <div class="fenderFront">
-          <img src="https://www.fmicassets.com/Damroot/ZoomJpg/10001/0118010712_gtr_frt_001_rr.jpg">
-        </div>
-        <p>La serie American Ultra de guitarras y bajos es la más avanzada para músicos exigentes que exigen lo último
-          en precisión,
-          rendimiento y tono. La American Ultra Stratocaster presenta un exclusivo perfil de mástil de " D moderna”
-          con bordes de diapasón redondeados para horas de comodidad, y la forma del talón del mástil permite un fácil
-          acceso al registro más alto.
-          Un veloz diapasón de radio compuesto de 10 "a 14" con 22 trastes medium jumbo para solos precisos y sin
-          esfuerzo, mientras que las pastillas Ultra Noiseless ™
-          y las opciones avanzadas de cableado brindan infinitas posibilidades de sonido: sin zumbidos. Este versátil
-          instrumento de última generación te inspirará a llevar
-          tu interpretación a nuevas alturas. Otras características incluyen clavijeros de bloqueo sellados, herrajes
-          cromados y cejilla de hueso. Incluye estuche rígido}
-          moldeado de primera calidad.</p>
+    <section class="conteiner-fluid">
+      <div class="row">
+        <div class="col-12">
+          <article class="fenderAs">
+            <h2 class="animate__animated animate__headShake">Fender American Ultra Stratocaster</h2>
+            <div id="carouselExampleIndicators" class="carousel slide imgFend" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                  aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                  aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                  aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                  aria-label="Slide 4"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="https://www.fmicassets.com/Damroot/ZoomJpg/10001/0118010712_gtr_frt_001_rr.jpg"
+                    class="d-block w-100 imgfend1" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="https://www.fmicassets.com/Damroot/ZoomJpg/10001/0118010712_gtr_back_001_rl.jpg"
+                    class="d-block w-100 imgfend2" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="https://www.fmicassets.com/Damroot/ZoomJpg/10001/0118012795_gtr_frt_001_rr.jpg"
+                    class="d-block w-100 imgfend3" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="https://www.fmicassets.com/Damroot/ZoomJpg/10001/0118012795_gtr_back_001_rl.jpg"
+                    class="d-block w-100 imgfend4" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
 
-        <h3>CARACTERÍSTICAS</h3>
-        <p>
-          Tres pastillas de bobina simple Ultra Noiseless Vintage.
-          Perfil de mástil en forma de "D moderna".
-          Diapasón de radio compuesto de 10 "-14"; 22 trastes medium jumbo.
-          Incluye estuche rígido moldeado premium</p>
-        <h3>MÁSTIL "D" MODERNA</h3>
-        <p>Delgado pero más ancho, el perfil del mástil "Modern D" funciona para cualquier estilo de tocar. Los bordes
-          redondeados del diapasón y un acabado suave y sedoso hacen que el mástil sea fácil de tocar.</p>
-        <h3>RADIO COMPUESTO 10 "-14"</h3>
-        <p>Diseñado para la velocidad y los bendings, el diapasón de radio compuesto de 10 "-14" se redondea cerca de la
-          cejilla para facilitar la digitación, volviéndose cada vez más plano a medida que se acerca al registro
-          superior para solos más fáciles de ejecutar.</p>
-        <h3>CONTORNO DEL CUERPO MEJORADO</h3>
-        <p>El talón del mástil presenta contornos rediseñados para un acceso incomparable a los registros superiores del
-          diapasón, mientras que el contorno del cuerpo trasero está diseñado para mayor comodidad.
-        </p>
-        <h3>PASTILLAS VINTAGE ULTRA NOISELESS</h3>
-        <p>Las pastillas de bobina simple Ultra Noiseless Vintage conservan el legendario tono Fender, al tiempo que
-          reducen el zumbido.
-        </p>
-        <h3>ELECTRÓNICA AVANZADA</h3>
-        <p>El interruptor S-1 de la perilla de volumen selecciona entre el cableado en serie o en paralelo para un rango
-          tonal adicional, mientras que el circuito de “treble bleed” mantiene los agudos en cualquier volumen.
-        </p>
-        <h3>CLAVIJERO DE BLOQUEO</h3>
-        <p>Una característica de alto rendimiento, el clavijero de bloqueo ofrece una mayor estabilidad de afinación a
-          la vez que cambiar las cuerdas sea más rápido y fácil.
-        </p>
-          <h2>Fender Test</h2>
-          <div class="fenderTest">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/WURQr9IASgM" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+            <p>La serie American Ultra de guitarras y bajos es la más avanzada para músicos exigentes que exigen lo
+              último
+              en precisión,
+              rendimiento y tono. La American Ultra Stratocaster presenta un exclusivo perfil de mástil de " D moderna”
+              con bordes de diapasón redondeados para horas de comodidad, y la forma del talón del mástil permite un
+              fácil
+              acceso al registro más alto.
+              Un veloz diapasón de radio compuesto de 10 "a 14" con 22 trastes medium jumbo para solos precisos y sin
+              esfuerzo, mientras que las pastillas Ultra Noiseless ™
+              y las opciones avanzadas de cableado brindan infinitas posibilidades de sonido: sin zumbidos. Este
+              versátil
+              instrumento de última generación te inspirará a llevar
+              tu interpretación a nuevas alturas. Otras características incluyen clavijeros de bloqueo sellados,
+              herrajes
+              cromados y cejilla de hueso. Incluye estuche rígido moldeado de primera calidad.</p>
+
+            <h2>Especificaciones</h2>
+            <p>
+              Tres pastillas de bobina simple Ultra Noiseless Vintage.
+              Perfil de mástil en forma de "D moderna".
+              Diapasón de radio compuesto de 10 "-14"; 22 trastes medium jumbo.
+              Incluye estuche rígido moldeado premium</p>
+            <h3>MÁSTIL "D" MODERNA</h3>
+            <p>Delgado pero más ancho, el perfil del mástil "Modern D" funciona para cualquier estilo de tocar. Los
+              bordes
+              redondeados del diapasón y un acabado suave y sedoso hacen que el mástil sea fácil de tocar.</p>
+            <h3>RADIO COMPUESTO 10 "-14"</h3>
+            <p>Diseñado para la velocidad y los bendings, el diapasón de radio compuesto de 10 "-14" se redondea cerca
+              de la
+              cejilla para facilitar la digitación, volviéndose cada vez más plano a medida que se acerca al registro
+              superior para solos más fáciles de ejecutar.</p>
+            <h3>CONTORNO DEL CUERPO MEJORADO</h3>
+            <p>El talón del mástil presenta contornos rediseñados para un acceso incomparable a los registros superiores
+              del
+              diapasón, mientras que el contorno del cuerpo trasero está diseñado para mayor comodidad.
+            </p>
+            <h3>PASTILLAS VINTAGE ULTRA NOISELESS</h3>
+            <p>Las pastillas de bobina simple Ultra Noiseless Vintage conservan el legendario tono Fender, al tiempo que
+              reducen el zumbido.
+            </p>
+            <h3>ELECTRÓNICA AVANZADA</h3>
+            <p>El interruptor S-1 de la perilla de volumen selecciona entre el cableado en serie o en paralelo para un
+              rango
+              tonal adicional, mientras que el circuito de “treble bleed” mantiene los agudos en cualquier volumen.
+            </p>
+            <h3>CLAVIJERO DE BLOQUEO</h3>
+            <p>Una característica de alto rendimiento, el clavijero de bloqueo ofrece una mayor estabilidad de afinación
+              a
+              la vez que cambiar las cuerdas sea más rápido y fácil.
+            </p>
+            <h2>Fender Test</h2>
+            <div class="fenderTest">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/WURQr9IASgM"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            </div>
+          </article>
         </div>
-      </article>
+      </div>
     </section>
+
   </main>
   <footer class="footer">
     <div>
@@ -114,6 +174,12 @@
       <h3 class="copyR">@2022 RigHunters Copyright</h3>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+  </script>
 
 </body>
 
