--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="guitarras,argentina,dimarzio,ibanez,fender,suhr">
+  <meta name="description" content="En Rig Hunter tenemos la guitarra que buscas para inciar en el mundo musical.
+  aqui encontraras las especificaciones de cada una de ellas.">
   <title>RHs</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
