--- a/paginas/ibanez.html
+++ b/paginas/ibanez.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="guitarras,argentina,dimarzio,ibanez,fender,suhr">
   <title> RH Ibanez</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -58,7 +59,7 @@
         <div class="row">
           <div class="col-12">
             <article class="ibanezRg">
-              <h2 class="animate__animated animate__headShake">Ibanez RG8527Z</h2>
+              <h2 class="animate__animated animate__headShake headPg">Ibanez RG8527Z</h2>
               <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
